--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: signalr_socket
-description: SignalR Socket
+description: SignalR Socket for Flutter
 version: 1.0.1
-homepage:
+homepage: https://github.com/ARASHz4/signalr_socket_flutter
 
 environment:
   sdk: '>=2.18.4 <3.0.0'
